2003-06-24  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/syscalls.list (pread, pwrite): Use
	the 64-bit syscall name.

	* sysdeps/alpha/setjmp.S (_setjmp, setjmp): Mark .prologue.

2003-06-24  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/fpu/libm-test-ulps: Update.

2003-06-24  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/stat.h (_STAT_VER_LINUX): Avoid
	redeclaration with 32-bit code.

2003-05-19  Ed Connell  <ed.connell@sas.com>

	* sysdeps/unix/sysv/linux/i386/getcontext.S (getcontext): Retain
	floating point mask.
	* sysdeps/i386/fpu/fegetenv.c (fegetenv): Likewise.

2003-06-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/aio_misc.h: Mark __aio_requests_mutex,
	__aio_enqueue_request, __aio_find_req, __aio_find_req_fd,
	__aio_free_request, __aio_notify, and __aio_sigqueue as hidden.

	* sysdeps/pthread/aio_suspend.c (aio_suspend): Set errno to the result
	of pthread_cond_wait if there was an error.  Use pthread_cleanup_*
	instead of __lbic_cleanup_region_*.

2003-06-20  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/make-syscalls.sh: Implement ! prefix for strong aliases.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list (open, open64): New.

2003-06-20  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/alpha/sysdep.h (INLINE_SYSCALL1): Use __builtin_expect.
	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_ST_INO_64_BIT)
	Unset for alpha.
	(__ASSUME_TIMEVAL64): Set for alpha.
	* sysdeps/unix/sysv/linux/alpha/Makefile (sysdep_routines): Remove
	adjtimex, osf_sigprocmask, old_adjtimex.
	* sysdeps/unix/sysv/linux/alpha/adjtime.c: Use INLINE_SYSCALL,
	__ASSUME_TIMEVAL64.  Reorg tv64 functions to avoid uninit variable.
	* sysdeps/unix/sysv/linux/alpha/getitimer.S: Use __ASSUME_TIMEVAL64.
	* sysdeps/unix/sysv/linux/alpha/getrusage.S: Likewise.
	* sysdeps/unix/sysv/linux/alpha/gettimeofday.S: Likewise.
	* sysdeps/unix/sysv/linux/alpha/select.S: Likewise.